automatically backed up by learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -4,6 +4,6 @@
 <h2>Cook Time:</h2>
 <p><%=@recipe.cook_time%></p>
 
-<p><a href="/recipes/#{@recipe1.id}/delete">Delete this recipe.</a></p>
+<p><a href="/recipes/<%#{@recipe.id}%>/delete">Delete this recipe.</a></p>
 
 <p>To see all recipes, visit <a href="/">Home</a>.</p>
