--- a/app/views/delete.erb
+++ b/app/views/delete.erb
@@ -1,4 +1,4 @@
 <form action="/recipes/<% @recipe.id %>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="delete">
-  <input type="submit" value="delete" name="delete">
+  <input type="submit" value="delete" id="delete">
 </form>
