--- a/app/views/new_recipe.erb
+++ b/app/views/new_recipe.erb
@@ -1,5 +1,5 @@
 <h1>Create a New Recipe</h1>
-<form action="/recipes/new" method="POST">
+<form action="/recipes" method="POST">
   <p>Recipe Name: <input type="text" name="name"></p>
   <p>Ingredients: <input type="text" name="ingredients"></p>
   <p>Cook Time: <input type="text" name="cook_time"></p>
