--- a/app/views/new_recipe.erb
+++ b/app/views/new_recipe.erb
@@ -3,5 +3,5 @@
   <p>Recipe Name: <input type="text" name="name"></p>
   <p>Ingredients: <input type="text" name="ingredients"></p>
   <p>Cook Time: <input type="text" name="cook_time"></p>
-  <input type="submit" name="submit">
+  <input type="submit" value="submit">
 </form>
