--- a/app/views/new_recipe.erb
+++ b/app/views/new_recipe.erb
@@ -1,7 +1,8 @@
 <h1>Create a New Recipe</h1>
 <form action="/recipes" method="POST">
-  <p>Recipe Name: <input type="text" name="name"></p>
-  <p>Ingredients: <input type="text" name="ingredients"></p>
-  <p>Cook Time: <input type="text" name="cook_time"></p>
+  <p>Recipe Name: <input id="name" type="text" name="name"></p>
+  <p>Ingredients: <input id="ingredients" type="text" name="ingredients"></p>
+  <p>Cook Time: <input id="cook_time" type="text" name="cook_time"></p>
+
   <input type="submit" value="submit">
 </form>
