automatically backed up by learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -5,5 +5,10 @@
 <p><%=@recipe.cook_time%></p>
 
 <p><a href="/recipes/<%#{@recipe.id}%>/delete">Delete this recipe.</a></p>
+<form action="/recipes/<% @recipe.id %>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="delete" id="delete">
+</form>
+
 
 <p>To see all recipes, visit <a href="/">Home</a>.</p>
