--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,5 +6,5 @@
   <p><%=recipe.ingredients%></p>
   <h3>Cook Time:</h3>
   <p><%=recipe.cook_time%></p>
-  <p>See full recipe at <a href="/recipes/<%"#{@recipe1.id}"%> ">the recipe page</a>.</p>
+  <p>See full recipe at <a href="/recipes/#{@recipe1.id}">the recipe page</a>.</p>
   <% end %>
