automatically backed up by learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -11,4 +11,4 @@
 </form>
 
 
-<p>To see all recipes, visit <a href="/">Home</a>.</p>
+<p>To see all recipes, visit <a href="/recipes">Home</a>.</p>
