--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,4 +6,5 @@
   <p><%=recipe.ingredients%></p>
   <h3>Cook Time:</h3>
   <p><%=recipe.cook_time%></p>
+  <p><a href="/recipes/<%= recipe.id %>">See full recipe</a>.</p>
   <% end %>
