--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -7,7 +7,7 @@
 
 <form action="/recipes/<%=@recipe.id %>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="delete">
-  <input type="submit" value="delete" id="delete">
+  <input type="submit" value="delete">
 </form>
 
 
