--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -6,8 +6,8 @@
 
 <form action="/recipes/<%= @recipe.id %>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  <p>Name: <input type="text" value="<%=@recipe.name%>"></p>
-  <p>Ingredients: <input type="text" value="<%=@recipe.ingredients%>"></p>
-  <p>Cook Time: <input type="text" value="<%=@recipe.cook_time%>"></p>
+  <p>Name: <input type="text" value="<%=@recipe.name%>" name="name"></p>
+  <p>Ingredients: <input type="text" value="<%=@recipe.ingredients%>"> name="name"</p>
+  <p>Cook Time: <input type="text" value="<%=@recipe.cook_time%>" name="name"></p>
   <input type="submit" value="submit">
 </form>
