--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -8,6 +8,6 @@
   <input id="hidden" type="hidden" name="_method" value="patch">
   <p>Name: <input type="text" value="<%=@recipe.name%>" name="name"></p>
   <p>Ingredients: <input type="text" value="<%=@recipe.ingredients%>" name="ingredients"></p>
-  <p>Cook Time: <input type="text" value="<%=@recipe.cook_time%>" name="name"></p>
+  <p>Cook Time: <input type="text" value="<%=@recipe.cook_time%>" name="cook_time"></p>
   <input type="submit" value="submit">
 </form>
