--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,3 +1,9 @@
+<h1><%=@recipe.name%></h1>
+<h2>Ingredients:</h2>
+<p><%=@recipe.ingredients%></p>
+<h2>Cook Time:</h2>
+<p><%=@recipe.cook_time%></p>
+
 <form action="/recipes/<%=@recipe.id%>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <p>Name: <input id = "name" type="text" value="<%=@recipe.name%>" name="name"></p>
